Checkpoint 2: Bootstrap Grid System and Quick Links complete

--- a/index.html
+++ b/index.html
@@ -35,13 +35,87 @@
    </div>
 
 
-   <!-- This empty div is where you'll add your Bootstrap schedule in Exercise 2 -->
-   <div id="schedule-section">
-       <!-- Your Bootstrap grid schedule will go here -->
-   </div>
-
-
-   <div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-3">
+                <h4>A Block</h4>
+                <h5>Biology Honors</h5>
+                <p>8:25 AM - 9:55 AM</p>
+                <a href="https://jajags.instructure.com/courses/3364">Go to Canvas →</a>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                <h4>B Block</h4>
+                <h5>Web Design in HTML & CSS</h5>
+                <p>10:00 AM - 11:30 AM</p>
+                <a href="https://jajags.instructure.com/courses/3438" target="_blank">Go to Canvas →</a>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                <h4>C Block</h4>
+                <h5>English 9 Honors</h5>
+                <p>12:15 AM - 1:45 PM</p>
+                <a href="https://jajags.instructure.com/courses/3168">Go to Canvas →</a>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                <h4>D Block</h4>
+                <h5>ASL 1</h5>
+                <p>1:50 PM - 3:20 PM</p>
+                <a href="https://jajags.instructure.com/courses/3397">Go to Canvas →</a>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-sm-2">STEM</div>
+            <div class="col-12 col-sm-2">Arts</div>
+            <div class="col-12 col-sm-8">Current Focus: Web Design</div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-4 col-md-3">
+                <h5>Completed</h5>
+                <p>5 assignments done!</p>
+            </div>
+            <div class="col-4 col-md-6">
+                <h5>In Progress</h5>
+                <p>2 assignments in progress</p>
+            </div>
+            <div class="col-4 col-md-3">
+                <h5>Not Started</h5>
+                <p>1 upcoming assignment</p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <h3>Quick Links</h3>
+        <div class="row">
+            <div class="col-12 col-md-4">
+                <h5>📚 Academic</h5>
+                <ul>
+                    <li><a href="https://jajags.instructure.com" target="_blank">Canvas</a></li>
+                    <li><a href="https://www.jeffersonacademy.org" target="_blank">JA Website</a></li>
+                    <li><a href="#">Student Portal</a></li>
+                </ul>
+            </div>
+            <div class="col-12 col-md-4">
+                <h5>🔧 Tools</h5>
+                <ul>
+                    <li><a href="https://drive.google.com/drive/home" target="_blank">Google Drive</a></li>
+                    <li><a href="https://code.visualstudio.com" target="_blank">VS Code</a></li>
+                    <li><a href="https://getbootstrap.com/docs/4.5/" target="_blank">Bootstrap Docs</a></li>
+                </ul>
+            </div>
+            <div class="col-12 col-md-4">
+                <h5>📖 Resources</h5>
+                <ul>
+                    <li><a href="https://www.w3schools.com" target="_blank">W3Schools</a></li>
+                    <li><a href="https://developer.mozilla.org" target="_blank">MDN Web Docs</a></li>
+                    <li><a href="#">Study Groups</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div>
        <h2>Study Resources</h2>
        <h3>Your Success Tools</h3>
        <p>Access helpful resources and study guides for all your subjects.</p>
