Checkpoint 4: My Classes page complete

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">My Classes</a></li>
+                        <li><a href="myclasses.html">My Classes</a></li>
                         <li><a href="#">Resources</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
