--- a/myclasses.html
+++ b/myclasses.html
@@ -97,7 +97,7 @@
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="myclasses.html">My Classes</a></li>
+                        <li><a href="myclassesnextquarter.html">Next Quarter</a></li>
                         <li><a href="#">Resources</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
