AI Assistant Added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
    <link rel="stylesheet" href="css/styles.css">
+   
 
    <title>JagTrack - Your Academic Success Hub</title>
 </head>
@@ -153,6 +154,7 @@
                         <li><a href="myclasses.html">My Classes</a></li>
                         <li><a href="#">Resources</a></li>
                         <li><a href="#">Contact</a></li>
+                        <li><a href="ai-chat.html">Ai Chat</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5 text-center">
