--- a/myclassesnextquarter.html
+++ b/myclassesnextquarter.html
@@ -22,12 +22,44 @@
 <body>
 
 
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <img src="img/ja-initials-bLCg4zbA.svg" height="30" width="30" alt="JA Logo" />
+                JagTrack
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#jagtrackNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="jagtrackNavbar">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="myclassesnextquarter.html">Next Quarter</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="aboutme.html">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ai-chat.html">AI Chat</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" id="theme-toggle">
+                            <span id="theme-icon">☀️</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col text-center">
                     <h1>JagTrack</h1>
-                    <h2>Next Quarter Planning</h2>
+                    <h2>Your Academic Success Hub</h2>
                 </div>
             </div>
         </div>
