Checkpoint 2: Integrated Google Calendar with Canvas Feeds

--- a/index.html
+++ b/index.html
@@ -193,11 +193,23 @@
    </div>
 
 
-   <div class="endpage">
-       <h2>Calendar & Deadlines</h2>
-       <h3>Stay On Track</h3>
-       <p>Never miss an assignment or test date again.</p>
-   </div>
+   <div class="container">
+  <div class="row row-content">
+      <div class="col">
+          <h2 class="text-center">Calendar & Deadlines</h2>
+          <h3 class="text-center">Stay On Track</h3>
+          <p class="text-center">Your Canvas assignments automatically sync to this calendar. Never miss a deadline!</p>
+      </div>
+  </div>
+  <div class="row">
+      <div class="col">
+          <div class="calendar-container">
+            <iframe class="google-calendar-responsive" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDenver&showPrint=0&mode=WEEK&src=MDNiOWI4bjRzY2g2bHZoNjZoczVsMTI4ZmVkamkybGhAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23f4511e" style="border:solid 1px #777" height="600" frameborder="0" scrolling="no"></iframe>
+          </div>
+      </div>
+  </div>
+</div>
+
 
 
     <footer>
